--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "flowmapperjs",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -45,7 +45,9 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-reload": "^1.5.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "p5": "^1.3.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
